add Service_Host model, create_service_port_rel and create_service_host_rel routes
